--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "8.3.0",
+    "npm": "5.3.0"
+  },
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
